[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/PlayerInterface/AnimationQueue/AnimationQueue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/PlayerBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Managers/Cards/Focused/FocusedCardManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerInterface/PlayerInterface.gd" type="Script" id=4]
[ext_resource path="res://Scenes/PlayerInterface/HandManager/HandManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/ActionsBoard.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CardNode2D/CardNode2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Managers/Cards/Focused/Battle/BattleCardManager.tscn" type="PackedScene" id=8]

[node name="PlayerInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 440.0, 352.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 32.0 ]
}

[node name="BattleBoard" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BattleBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BattleBoard/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 688.0

[node name="ActionsBoard" parent="BattleBoard/MarginContainer/VBoxContainer" instance=ExtResource( 6 )]

[node name="PlayerBoard" parent="BattleBoard/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 330.0
margin_right = 1216.0
margin_bottom = 656.0

[node name="HandContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardControl" type="Control" parent="HandContainer"]
margin_left = 640.0
margin_top = 140.0
margin_right = 640.0
margin_bottom = 140.0
mouse_filter = 1

[node name="HandManager" parent="HandContainer/CardControl" instance=ExtResource( 5 )]
hand_center_distance = 2048.0

[node name="BattleCardManager" parent="HandContainer/CardControl" instance=ExtResource( 8 )]
base_card_scene = ExtResource( 7 )

[node name="FocusedCardManager" parent="HandContainer/CardControl" instance=ExtResource( 3 )]
base_card_scene = ExtResource( 7 )

[node name="StatusUpdatesContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationQueue" parent="." instance=ExtResource( 1 )]

[node name="ResizeTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="gui_input" from="." to="." method="_on_PlayerInterface_gui_input"]
[connection signal="resized" from="." to="." method="_on_PlayerInterface_resized"]
[connection signal="discard_pile_pressed" from="BattleBoard/MarginContainer/VBoxContainer/PlayerBoard" to="." method="_on_PlayerBoard_discard_pile_pressed"]
[connection signal="draw_pile_pressed" from="BattleBoard/MarginContainer/VBoxContainer/PlayerBoard" to="." method="_on_PlayerBoard_draw_pile_pressed"]
[connection signal="ending_turn" from="BattleBoard/MarginContainer/VBoxContainer/PlayerBoard" to="." method="_on_PlayerBoard_ending_turn"]
[connection signal="exhaust_pile_pressed" from="BattleBoard/MarginContainer/VBoxContainer/PlayerBoard" to="." method="_on_PlayerBoard_exhaust_pile_pressed"]
[connection signal="card_updated" from="HandContainer/CardControl/HandManager" to="." method="_on_HandManager_card_updated"]
[connection signal="dragging_card" from="HandContainer/CardControl/BattleCardManager" to="." method="_on_BattleCardManager_dragging_card"]
[connection signal="dropping_card" from="HandContainer/CardControl/BattleCardManager" to="." method="_on_BattleCardManager_dropping_card"]
[connection signal="animation_started" from="AnimationQueue" to="." method="_on_AnimationQueue_animation_started"]
[connection signal="queue_empty" from="AnimationQueue" to="." method="_on_AnimationQueue_queue_empty"]
[connection signal="timeout" from="ResizeTimer" to="." method="_on_ResizeTimer_timeout"]
